# graph-rag

./: .env  .env.example  .gitignore  PROJECT_PLAN.md  PROJECT_PLAN_v1.md  README.md  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  tmp.py  tmp2.py  tmp3.py
.history/: PROJECT_PLAN_20260401221229.md  PROJECT_PLAN_20260409173612.md  PROJECT_PLAN_20260409182617.md  PROJECT_PLAN_20260409184137.md  PROJECT_PLAN_v1_20260409184335.md  PROJECT_PLAN_v1_20260409190018.md  PROJECT_PLAN_v1_20260409190832.md  PROJECT_PLAN_v1_20260409191648.md  PROJECT_PLAN_v1_20260409191727.md  PROJECT_PLAN_v1_20260409192250.md  PROJECT_PLAN_v1_20260409193322.md  tmp_20260225142242.py  tmp_20260225142405.py  tmp_20260225142611.py  tmp_20260225142653.py  tmp_20260226194645.py  tmp_20260226194928.py  tmp_20260226195604.py  tmp_20260226195735.py  tmp_20260226195802.py  tmp_20260226195831.py  tmp_20260226200004.py  tmp_20260226200017.py  tmp_20260226200032.py  tmp_20260226200146.py  tmp_20260226200316.py  tmp_20260226200328.py  tmp_20260226200358.py  tmp_20260226212856.py  tmp_20260226214213.py
data/: color.txt
docs/: 01_project_goal.md  02_app_overview.md  02_requirements.md  03_app_ingest_service.md  03_architecture.md  04_app_query_options.md  04_system_flows.md  05_app_query_service.md  05_interfaces.md  06_app_data_flow.md  06_indexing_pipeline.md  07_api_design.md  07_api_overview.md  08_api_main.md  08_observability.md  09_api_routes_ingest.md  10_api_routes_query.md  11_api_routes_health.md  12_api_schemas_ingest.md  14_api_schemas_init.md  19_port_kernel.md  (+37 more)
(+173 files in other folders)
